# Muspell

muspell-cli/: Cargo.toml
muspell-cli/src/: main.rs
muspell-core/: Cargo.toml
muspell-core/src/: config.rs  discovery.rs  error.rs  kns.rs  lib.rs  node.rs
muspell-daemon/: Cargo.toml
muspell-daemon/src/: main.rs
